--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,13 @@ body{
     box-sizing: border-box;
 }
 .Month {
+    font-family: "Arial GEO Bold", sans-serif;
     color: #3D58A6;
     font-size: 22px;
     margin-bottom: 17px;
 }
 .Title {
+    font-family: "ALK Life", sans-serif;
     font-size: 20px;
     width: 743px;
     height: 27px;
@@ -49,6 +51,7 @@ body{
     vertical-align: top;
 }
 .news-container{
+    font-family: 'Chivo Mono', monospace;
     display: inline-block;
     width: 929px;
     margin-left: 40px;
@@ -77,6 +80,8 @@ footer{
 }
 .featured{
     margin-left: 70px;
+    font-family: 'Roboto', sans-serif;
+
 }
 .featured h4{
     font-size: 24px;
